Use ByteBuddy instead of native ASM + add dependency handling among javaClasses